# motep

./: README.md  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml  docs.yml  tests.yml
docs/: authors.rst  calculators.rst  changelog.rst  conf.py  index.rst  installation.rst  io.rst  loss.rst
docs/api/: evaluate.rst  grade.rst  index.rst  train.rst
docs/cli/: apply.rst  evaluate.rst  grade.rst  index.rst  train.rst  upconvert.rst
docs/optimizers/: ga.rst  index.rst  linear.rst  scipy.rst
examples/1.0_python/: 0.train.py  1.grade.py  2.evaluate.py  9.calc.py  final.mtp  initial.mtp
motep/: evaluator.py
motep/optimizers/: base.py  ga.py  level2mtp.py  lls.py
motep/potentials/mtp/cext/: mtp_cext.c  mtp_cext_kernels.h
tests/: test_loss.py
