[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.18.0",
    "setuptools-scm>=8",
    "numpy>=2.0",
]

[project]
name = "motep"
dependencies = [
    "numpy>=1.23",  # This supports python 3.11.
    "ase",
    "scipy",
    "numba",
]
requires-python = ">=3.11"  # tomllib
readme = "README.md"
authors = [
    {name = "Axel Forslund"},  # calculator
    {name = "Yuji Ikeda"},  # testing
    {name = "Pranav Kumar"},  # trainer
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
license = 'MIT'
license-files = ['LICENSE']
dynamic = ["version"]

[project.optional-dependencies]
mpi = ["mpi4py"]
jax = [
  "jax",
]
test = [
  "pytest",
  "pytest-xdist",
]
doc = [
  "sphinx",
  "sphinx_book_theme",
  "numpydoc",
]

[project.scripts]
motep = "motep.cli:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
